fix a error